# TLN-Project

./: .gitignore  .gitmodules  README.md
Presentazioni/Project1/: tolkien.tex
Presentazioni/Project1/Presentazione/chapters/: 01.tex
Presentazioni/Project1/bibl/: bibl.bib
Presentazioni/Project1/chapters/: 01.tex  02.tex
Presentazioni/Project1/enviroment/: preamble.sty
Presentazioni/Project2/: sense.tex
Presentazioni/Project2/PDF/: sense.aux  sense.fdb_latexmk  sense.fls  sense.toc
Presentazioni/Project2/chapters/: 01.tex  02.tex
Presentazioni/Project2/enviroment/: titlepage.sty
Presentazioni/Project3/Esercitazioni/: esercitazioni.tex
Presentazioni/Project3/Paper/: pseudodictionary.tex
Project1/Presentazione/: .gitignore
Project1/Presentazione/PDF/: samplepaper.fdb_latexmk  samplepaper.fls  tolkien.aux  tolkien.fdb_latexmk  tolkien.fls  tolkien.toc
Project1/Presentazione/chapters/: 02.tex
Project1/tolkien/: Cargo.toml
Project1/tolkien/src/: main.rs
Project1/tolkien/src/cky/: mod.rs  (+1 more)
Project2/esercitazione 1/word_sense_disambiguation/: main  wsd.c
Project2/esercitazione 1/wsd/: lesk.py
Project2/esercitazione 2/: Cargo.toml
Project2/esercitazione 2/src/: main.rs
Project2/esercitazione 2/src/mode/: mod.rs  texts.rs  tweets.rs
Project2/esercitazione 2/src/ngrams/: bigrams.rs  mod.rs  trigrams.rs
Project2/esercitazione 2/src/utils/: miscellaneous.rs  mod.rs  prompting.rs
Project2/esercitazione_01_wsd/: .gitignore  Cargo.toml
Project2/esercitazione_01_wsd/src/: main.rs
Project3/Paper/PDF/: samplepaper.fdb_latexmk  samplepaper.fls
(+25 files in other folders)
